功能：更新语言包，修正使用帮助链接

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -5,7 +5,7 @@
   <string name="ABOUT_PHONE">Teléfono de servicio de cliente</string>
   <string name="ACCOUNT">Cuenta</string>
   <string name="ACCOUNT_1">Mi cuenta</string>
-  <string name="ACCOUNT_ERR">Por favor, introduzca una dirección de E&#8211;mail válida</string>
+  <string name="ACCOUNT_ERR">Por favor, introduzca una dirección de E-mail válida</string>
   <string name="ACCOUNT_ERR_1">Por favor, introduzca cuenta válida</string>
   <string name="ACCOUNT_ERR_3">Introduzca la cuenta</string>
   <string name="ACCOUNT_ID">CuentaID:%s</string>
@@ -149,7 +149,7 @@
   <string name="DOOR_BIND">¡Enhorabuena! Ha logrado añadir \n se puede mantener enterando a todas horas de lo que pasa fuera de la pueta</string>
   <string name="DOOR_BLINKING">Luz roja</string>
   <string name="DOOR_BLUE_BLINKING">Azul claro</string>
-  <string name="DOOR_BLUE_BLINKING_EX">Cuando la luz no es \"sólido rojo\", por favor re&#8211;arranque, a continuación, pulse el botón WiFi durante unos tres segundos después del lanzamiento, hasta el rojo sólido.</string>
+  <string name="DOOR_BLUE_BLINKING_EX">Cuando la luz no es \"sólido rojo\", por favor re-arranque, a continuación, pulse el botón WiFi durante unos tres segundos después del lanzamiento, hasta el rojo sólido.</string>
   <string name="DOOR_CALL">Se ha contestado</string>
   <string name="DOOR_CALL_RECORD">No hay récord de llamada</string>
   <string name="DOOR_CAMERA">Tomar fotos</string>
@@ -210,11 +210,11 @@
   <string name="EFAMILY_RELEVANCE_ALARE">Disociar \'%1$s\', dispositivo de \'%2$s\' no recibirá mensaje de llamada timbre</string>
   <string name="EFAMILY_RELEVANCE_DOOR">Doorbell Asociado</string>
   <string name="EFAMILY_VIDEOCALLING1">Llamar&#8230;</string>
-  <string name="EMAIL">E&#8211;mail</string>
-  <string name="EMAIL_1">E&#8211;mail</string>
+  <string name="EMAIL">E-mail</string>
+  <string name="EMAIL_1">E-mail</string>
   <string name="EMAIL_2">Por favor, introduzca el correo electrónico</string>
   <string name="EMAIL_RESET_PWD">Desde el sistema le hemos enviado un correo electrónico a %s, por favor, haga clic en el enlace de este correo para restablecer su contraseña.</string>
-  <string name="EMAIL_SIGNUP">E&#8211;mail</string>
+  <string name="EMAIL_SIGNUP">E-mail</string>
   <string name="END_TALKBACK">Intercom terminado</string>
   <string name="ENERGY_SAVE_CALL">Pulse la tecla de llamada</string>
   <string name="ENERGY_SAVE_HELP">Ayuda</string>
@@ -282,7 +282,7 @@
   <string name="HOME">Página de inicio</string>
   <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">No se puede conectar a puntos de acceso</string>
   <string name="HOTSPOT_CONNECT_FAILED">Se ha producido un error en la conexión.</string>
-  <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+  <string name="HOTSPOT_DEFAULT">Cam-Hotspot</string>
   <string name="HOTSPOT_DEVICE_CONNECTING">Conexión del dispositivo</string>
   <string name="HOTSPOT_NAME">Hotspot: %s</string>
   <string name="HOTSPOT_NEME_HINT">Introduzca un nombre de zona activa</string>
@@ -373,7 +373,7 @@
   <string name="LIVE_UNABLE_UNBIND">El actual %1$s use %2$s login, temporalmente incapaz de desvincular la cuenta</string>
   <string name="LIVE_UNBIND_ACCOUNT">¿Desvincular %s cuenta o no?</string>
   <string name="LOADING">Cargando&#8230;</string>
-  <string name="LOCAL_NOTIFICATION_AndroidMSG">Busque en el Phone \"%s\" en la página de \"Aviso&#8211;&#8211;Ajuste\" y elija \"permitir la notificación\"</string>
+  <string name="LOCAL_NOTIFICATION_AndroidMSG">Busque en el Phone \"%s\" en la página de \"Aviso--Ajuste\" y elija \"permitir la notificación\"</string>
   <string name="LOCATION">Ubicaci:</string>
   <string name="LOCATION_1">Nombre</string>
   <string name="LOCATION_NAME">Ubicación:</string>
@@ -446,10 +446,10 @@
   <string name="NO_DEVICE_1">No se ha encontrado ningún dispositivo</string>
   <string name="NO_MESSAGE">No hay mensajes</string>
   <string name="NO_NERWORK_CHEAKDEVICE">Falla en la red \n Si la lista es ningún dispositivo, por favor vuelva a agregar</string>
-  <string name="NO_NETWORK_1">Conexión fracasada &#8211;1</string>
+  <string name="NO_NETWORK_1">Conexión fracasada -1</string>
   <string name="NO_NETWORK_2">Conexión fracasada</string>
-  <string name="NO_NETWORK_4">Conexión fracasada&#8211;4, confrime y pruebe otra vez</string>
-  <string name="NO_NETWORK_5">Conexión fracasada&#8211;5, el dispositivo no funciona</string>
+  <string name="NO_NETWORK_4">Conexión fracasada-4, confrime y pruebe otra vez</string>
+  <string name="NO_NETWORK_5">Conexión fracasada-5, el dispositivo no funciona</string>
   <string name="NO_NETWORK_DOOR">Conexión fracasada</string>
   <string name="NO_SDCARD">No hay tarjeta Micro SD</string>
   <string name="NO_SET">No establecido</string>
@@ -474,7 +474,7 @@
   <string name="PASSWORD">Contraseña</string>
   <string name="PASSWORD_BIT">Nueva Contraseña</string>
   <string name="PASSWORD_LESSTHAN_SIX">La contraseña debe tener de 6 a 32 dígitos</string>
-  <string name="PHONE_EMAIL">E&#8211;mail</string>
+  <string name="PHONE_EMAIL">E-mail</string>
   <string name="PHONE_NUMBER">Número de teléfono</string>
   <string name="PHONE_NUMBER_1">Número de teléfono</string>
   <string name="PHONE_NUMBER_2">Introduzca número de teléfono válido por favor</string>
@@ -488,7 +488,7 @@
   <string name="PLEASE_WAIT_2">Añadir, por favor espere&#8230;</string>
   <string name="PROFILE_PHOTO">Foto de perfil</string>
   <string name="PROXY_INTERNET">Si utiliza el proxy Internet, cierre el proxy y luego vincule</string>
-  <string name="PULL_TO_LOAD">Pull&#8211;zu&#8211;Lade</string>
+  <string name="PULL_TO_LOAD">Pull-zu-Lade</string>
   <string name="PULL_TO_REFRESH">Desplegar para actualizar</string>
   <string name="PUSH_MSG">Notificaciones</string>
   <string name="PWD_CHANGED">Se ha cambiado la contraseña de su cuenta, por favor, inicie de nuevo.</string>
@@ -523,7 +523,7 @@
   <string name="REFRESH">Renovar, por favor</string>
   <string name="REFRESHING">Cargando</string>
   <string name="REGISTERED">Esta cuenta ha sido inscribida</string>
-  <string name="RELEASE_TO_LOAD">Lassen&#8211;to&#8211;load</string>
+  <string name="RELEASE_TO_LOAD">Lassen-to-load</string>
   <string name="RELEASE_TO_REFRESH">Soltar para actualizar</string>
   <string name="REMAIN_SPACE">%s GB</string>
   <string name="REPEAT">Repetir</string>
@@ -549,7 +549,7 @@
   <string name="RET_EISBIND_UNBIND">CID No enlazado</string>
   <string name="RET_ELOGIN_ACCOUNT_NOT_EXIST">Cuenta no registrada</string>
   <string name="RET_ELOGIN_CID_SN_NOTMATCH">CID no concuerda con SN</string>
-  <string name="RET_ELOGIN_ERROR">Dirección de E&#8211;mail o contraseña incorrecta</string>
+  <string name="RET_ELOGIN_ERROR">Dirección de E-mail o contraseña incorrecta</string>
   <string name="RET_ELOGIN_VCODE_ERROR">Introduza código de prueba correcto</string>
   <string name="RET_EMODE_STANDARD">Ajustes hechos, funcionará en modo normal.</string>
   <string name="RET_EPARAMS_FALSE">Argument Fehler</string>
@@ -649,7 +649,7 @@
   <string name="SHARE_ACCOUNT">Cuenta</string>
   <string name="SHARE_DOWNLOAD">Por favor, descargue la foto original y luego comparta</string>
   <string name="SHARE_ERR">Sólo se puede compartir con 5 amigos</string>
-  <string name="SHARE_E_MAIL">E&#8211;mail</string>
+  <string name="SHARE_E_MAIL">E-mail</string>
   <string name="SHARE_FROM">Compartido desde %s</string>
   <string name="SHARE_NAME">Se ha compartido con</string>
   <string name="SIGN_UP">Registrarse</string>
@@ -730,7 +730,7 @@
   <string name="TURN_ON_PROTECTION">Cuando la protección está activada, el usuario será notificado cuando el movimiento se detecte en el período de tiempo establecido.</string>
   <string name="Tap0_AlreadyEmailed">Desde el sistema le hemos enviado un correo electrónico a</string>
   <string name="Tap0_Authorizationfailed">Error de autorización, por favor, inténtelo de nuevo.</string>
-  <string name="Tap0_BindEmail">Fijar E&#8211;mail</string>
+  <string name="Tap0_BindEmail">Fijar E-mail</string>
   <string name="Tap0_BindPhoneNo">Fijar el número de telefono</string>
   <string name="Tap0_BindTips">Después de fijarlo, se puede servirse para iniciar la sesión y buscar la contraseña.</string>
   <string name="Tap0_Click_ActivateAccount">haz clic en el enlace para activar tu cuenta.</string>
@@ -738,7 +738,7 @@
   <string name="Tap0_Login_NoInstalled">Sin %s instalado</string>
   <string name="Tap0_Register_VerificationCode">Ingrese el código de verificación</string>
   <string name="Tap0_WelcomeTourist">Ver primero</string>
-  <string name="Tap0_enterphoneoremail">Introducir el número de telefono o E&#8211;mail.</string>
+  <string name="Tap0_enterphoneoremail">Introducir el número de telefono o E-mail.</string>
   <string name="Tap0_invaildcode">Código de verificación inválido</string>
   <string name="Tap0_register">Suscribirse</string>
   <string name="Tap0_register_EmailVerification">Verificacion de email</string>
@@ -901,7 +901,7 @@
   <string name="Tap1_Update">Actualizar</string>
   <string name="Tap1_UpdateFirmwareTips">Actualizar comienza en breve,asegúrese de que el teléfono móvil y el dispositivo están conectados con el mismo WIFI</string>
   <string name="Tap1_Update_Electricity">La energía está inferior al 30%, no se puede actualizar, por favor vuelve a intentar después de cargar completamente.</string>
-  <string name="Tap1_Update_Precautions">La actualización requiere aproximadamente 4&#8211;5 minutos. En el proceso no deja el dispositivo fuera de la red.</string>
+  <string name="Tap1_Update_Precautions">La actualización requiere aproximadamente 4-5 minutos. En el proceso no deja el dispositivo fuera de la red.</string>
   <string name="Tap1_device_deleted">Este dispositivo ha sido eliminado.</string>
   <string name="Tap1_iHome_Associate">Asociar</string>
   <string name="Tap1_iHome_Associated">Asociado</string>
@@ -1074,13 +1074,13 @@
   <string name="WIFI_OFF">WiFi no conectado en este teléfono, inténtelo de nuevo al conectar con el Internet</string>
   <string name="WIFI_PWD">Contraseña</string>
   <string name="WIFI_PWD_1">Contraseña:</string>
-  <string name="WIFI_SET_2">1.Por favor, asegure que la luz azul de la señal de WIFI del dispositivo está parpadeando, si no, mantenga pulsando el botón de WiFi durante tres segundos.\n2.Por favor, busque en la Configuración del iPhone &#8211; Wireless LAN, seleccione \"%s\" conexión,Contraseña ocho 1</string>
-  <string name="WIFI_SET_3">Ajustes de phone &#8211;>Red de área local inalámbrica,elija DOG&#8211;****** entre, si necesitan contraseña, introduzca 11111111</string>
-  <string name="WIFI_SET_3_1">Ajustes de phone &#8211;>Red de área local inalámbrica,elija DOG&#8211;ML****** entre,si necesitan contraseña, introduzca 11111111</string>
+  <string name="WIFI_SET_2">1.Por favor, asegure que la luz azul de la señal de WIFI del dispositivo está parpadeando, si no, mantenga pulsando el botón de WiFi durante tres segundos.\n2.Por favor, busque en la Configuración del iPhone - Wireless LAN, seleccione \"%s\" conexión,Contraseña ocho 1</string>
+  <string name="WIFI_SET_3">Ajustes de phone ->Red de área local inalámbrica,elija DOG-****** entre, si necesitan contraseña, introduzca 11111111</string>
+  <string name="WIFI_SET_3_1">Ajustes de phone ->Red de área local inalámbrica,elija DOG-ML****** entre,si necesitan contraseña, introduzca 11111111</string>
   <string name="WIFI_SET_4">lver a %s</string>
   <string name="WIFI_SET_5GTIPS">Nota:No es compatible con el WiFi 5G</string>
-  <string name="WIFI_SET_RS">Ajustes de phone &#8211;>Red de área local inalámbrica,elija RS&#8211;CAM****** entre,si necesitan contraseña, introduzca 11111111</string>
-  <string name="WIFI_SET_VER">Ajustes de phone &#8211;>Red de área local inalámbrica,elija %s entre,si necesitan contraseña, introduzca 11111111</string>
+  <string name="WIFI_SET_RS">Ajustes de phone ->Red de área local inalámbrica,elija RS-CAM****** entre,si necesitan contraseña, introduzca 11111111</string>
+  <string name="WIFI_SET_VER">Ajustes de phone ->Red de área local inalámbrica,elija %s entre,si necesitan contraseña, introduzca 11111111</string>
   <string name="WONDER_TODAY_H_M">Hoy HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Ayer HH:mm</string>
   <string name="WeChat">WeChat</string>
@@ -1111,7 +1111,7 @@
   <string name="connecting_ap">Por favor, espere&#8230;</string>
   <string name="contacts_auth">Contactos</string>
   <string name="copy">Copiar</string>
-  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
+  <string name="copyrightEn">Copyright ©2005-%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\nEs el número de teléfono, puedes:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
@@ -1135,7 +1135,7 @@
   <string name="please_choose_wifi">Introduzca el nombre de Wifi</string>
   <string name="receive_new_news">Recibió %s mensajes nuevos</string>
   <string name="rename">Introduzca el nombre del dispositivo</string>
-  <string name="service_phonenum">+86 400&#8211;716&#8211;3232</string>
+  <string name="service_phonenum">+86 400-716-3232</string>
   <string name="set_failed">Error al guardar el ajuste</string>
   <string name="setwifi_check">Configure su teléfono para conectarse a \"%s\"</string>
   <string name="share_content">Bonita App, también puede tener un intento ~</string>
