--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -214,7 +214,7 @@
   <string name="EMAIL_1">メールアドレス</string>
   <string name="EMAIL_2">有効なメールアドレスを入力してください</string>
   <string name="EMAIL_RESET_PWD">システムがメールを%sに送信しましたので、送信されたリンクをクリックしてパスワードの変更をしてください</string>
-  <string name="EMAIL_SIGNUP">E&#8211;mail</string>
+  <string name="EMAIL_SIGNUP">E-mail</string>
   <string name="END_TALKBACK">通話終了～</string>
   <string name="ENERGY_SAVE_CALL">コールキーを押す</string>
   <string name="ENERGY_SAVE_HELP">ヘルプ</string>
@@ -365,7 +365,7 @@
   <string name="LIVE_SAVE_FAILED">保存に失敗しました。再試行してください</string>
   <string name="LIVE_SELECT_PLATFORM">ライブプラットフォームを選択する</string>
   <string name="LIVE_SINAWEIBO_UNABLE_LIVE">このアカウントは一時的に生きることができません。</string>
-  <string name="LIVE_SINAWEIBO_UNCERTIFICATED">未確認のアカウントは、マイクロブログの一番下にある \"+\" > \"ライブ"をクリックして確認を完了してください</string>
+  <string name="LIVE_SINAWEIBO_UNCERTIFICATED">未確認のアカウントは、マイクロブログの一番下にある \"+\" > \"ライブ \"をクリックして確認を完了してください</string>
   <string name="LIVE_SLOW_CONNECTION">接続が遅い、より良いネットワーク環境でライブビデオを再生、切り替え、または再試行することはできません。</string>
   <string name="LIVE_STOP_POP">停止後、ライブアドレスは停止するかどうか無効ですか？</string>
   <string name="LIVE_TESTING">ライブWebのテスト中&#8230;</string>
@@ -901,7 +901,7 @@
   <string name="Tap1_Update">更新</string>
   <string name="Tap1_UpdateFirmwareTips">更新が間もなく開始されます。携帯電話と端末が同じWIFIに接続していることを確認してください</string>
   <string name="Tap1_Update_Electricity">バッテリ残量が30%以下ですので更新できません。充電してからリトライしてください。</string>
-  <string name="Tap1_Update_Precautions">アップデートの所要時間は約4&#8211;5分です。完了するまでは電源やネットワーク接続を切らないでください。</string>
+  <string name="Tap1_Update_Precautions">アップデートの所要時間は約4-5分です。完了するまでは電源やネットワーク接続を切らないでください。</string>
   <string name="Tap1_device_deleted">デバイスを削除されました。</string>
   <string name="Tap1_iHome_Associate">関連</string>
   <string name="Tap1_iHome_Associated">関連する</string>
@@ -1075,12 +1075,12 @@
   <string name="WIFI_PWD">パスワード</string>
   <string name="WIFI_PWD_1">パスワード：</string>
   <string name="WIFI_SET_2">1. デバイスのWiFiランプが青く点滅しているかどうかチェックしてください。点滅していない場合、点滅するまでWiFiキーを約3秒間長押ししてください\n2.iPhoneの設定> WiFiを開き、\"%s\"WiFiを選択し、追加してください,パスワード11111111</string>
-  <string name="WIFI_SET_3">システム設定&#8211;>WiFiにDOG&#8211;**&#8211;******を選択し追加してください,パスワード11111111</string>
-  <string name="WIFI_SET_3_1">システム設定&#8211;> WiFiにDOG&#8211;ML &#8211;******を選択し追加してください,パスワード11111111</string>
+  <string name="WIFI_SET_3">システム設定->WiFiにDOG-**-******を選択し追加してください,パスワード11111111</string>
+  <string name="WIFI_SET_3_1">システム設定-> WiFiにDOG-ML -******を選択し追加してください,パスワード11111111</string>
   <string name="WIFI_SET_4">戻る%s</string>
   <string name="WIFI_SET_5GTIPS">注意：ただいま5GHz式のWiFi電波が適用されません</string>
-  <string name="WIFI_SET_RS">システム設定&#8211;> WiFiにRS&#8211;CAM &#8211;******を選択し追加してください,パスワード11111111</string>
-  <string name="WIFI_SET_VER">システム設定&#8211;> WiFiに %s を選択し追加してください,パスワード11111111</string>
+  <string name="WIFI_SET_RS">システム設定-> WiFiにRS-CAM -******を選択し追加してください,パスワード11111111</string>
+  <string name="WIFI_SET_VER">システム設定-> WiFiに %s を選択し追加してください,パスワード11111111</string>
   <string name="WONDER_TODAY_H_M">今日 HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">昨日 HH:mm</string>
   <string name="WeChat">WeChat</string>
@@ -1111,7 +1111,7 @@
   <string name="connecting_ap">獲得中&#8230;</string>
   <string name="contacts_auth">連絡帳</string>
   <string name="copy">复制</string>
-  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
+  <string name="copyrightEn">Copyright ©2005-%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\nは、電話番号であってもよいし、次のことができます：</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
@@ -1135,7 +1135,7 @@
   <string name="please_choose_wifi">ネットワークの選択</string>
   <string name="receive_new_news">%s新しい情報の提示</string>
   <string name="rename">名前編集</string>
-  <string name="service_phonenum">+86 400&#8211;716&#8211;3232</string>
+  <string name="service_phonenum">+86 400-716-3232</string>
   <string name="set_failed">設定ができませんでした</string>
   <string name="setwifi_check">設定次に、\"%s\"のWiFiネットワークに接続してください</string>
   <string name="share_content">ニースアプリ、あなたも試してみることができます〜</string>
