--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -36,7 +36,7 @@
   <string name="Add_Device_Scan_QR">QR kodu tara</string>
   <string name="Added_successfully">Başarıyla bind</string>
   <string name="Alarm_WeChat">WeChet üzerinden alarm</string>
-  <string name="Alarm_WeChat_NoBindTips">Bu işlevi kullanmak, önce e&#8211;postayı bağlamak zorundadır.</string>
+  <string name="Alarm_WeChat_NoBindTips">Bu işlevi kullanmak, önce e-postayı bağlamak zorundadır.</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -57,13 +57,13 @@
   <string name="CAMERA">Kamera</string>
   <string name="CANCEL">İptal et</string>
   <string name="CARRY_ON">Devam et</string>
-  <string name="CHANGE_EMAIL">E&#8211;posta değiştir</string>
+  <string name="CHANGE_EMAIL">E-posta değiştir</string>
   <string name="CHANGE_PHONE_NUM">Telefon numarası değiştir</string>
   <string name="CHANGE_PWD">Şifre değiştir</string>
   <string name="CHARGING">Şarj oluyor</string>
   <string name="CHOOSE">Seç</string>
   <string name="CHOOSE_COVER">Kapak seç</string>
-  <string name="CHOOSE_NETWORK">Ayarlamalar &#8211; Bir ağ seç</string>
+  <string name="CHOOSE_NETWORK">Ayarlamalar - Bir ağ seç</string>
   <string name="CHOOSE_PHOTOS">Fotoğraflardan seç</string>
   <string name="CHOOSE_PIC">Kullanıcı tanımlı</string>
   <string name="CHOOSE_WIFI">Bir ağ seç</string>
@@ -210,16 +210,16 @@
   <string name="EFAMILY_RELEVANCE_ALARE">%1$s ı kaldır，ondan sonra %2$s herhangi bir çağrı mesajı almayacaktır.</string>
   <string name="EFAMILY_RELEVANCE_DOOR">Bağlı kapı zili</string>
   <string name="EFAMILY_VIDEOCALLING1">Arıyor&#8230;</string>
-  <string name="EMAIL">E&#8211;posta</string>
-  <string name="EMAIL_1">E&#8211;posta</string>
-  <string name="EMAIL_2">Geçersiz E&#8211;posta</string>
-  <string name="EMAIL_RESET_PWD">Zaten %s ye e&#8211;posta gönderildi, şifreyi sıfırlamak için lütfen epostadaki bağlantıya tıklayınız</string>
-  <string name="EMAIL_SIGNUP">E&#8211;mail</string>
+  <string name="EMAIL">E-posta</string>
+  <string name="EMAIL_1">E-posta</string>
+  <string name="EMAIL_2">Geçersiz E-posta</string>
+  <string name="EMAIL_RESET_PWD">Zaten %s ye e-posta gönderildi, şifreyi sıfırlamak için lütfen epostadaki bağlantıya tıklayınız</string>
+  <string name="EMAIL_SIGNUP">E-mail</string>
   <string name="END_TALKBACK">Karşılıklı konuşma sonu</string>
   <string name="ENERGY_SAVE_CALL">Arama tuşuna basın</string>
   <string name="ENERGY_SAVE_HELP">Yardım</string>
   <string name="ENERGY_SAVE_MODE">Güç tasarrufu modu</string>
-  <string name="ENERGY_SAVE_MODE_Description">Kapı zili mesajını almak için kullanılabilir, ancak canlı, video, güvenlik özelliklerini görüntülemek için kullanamazsınız. \"Sadece gece açık\" olarak ayarlanırsa, yalnızca 22: 00&#8211;08: 00 saatleri arasında geçerlidir.</string>
+  <string name="ENERGY_SAVE_MODE_Description">Kapı zili mesajını almak için kullanılabilir, ancak canlı, video, güvenlik özelliklerini görüntülemek için kullanamazsınız. \"Sadece gece açık\" olarak ayarlanırsa, yalnızca 22: 00-08: 00 saatleri arasında geçerlidir.</string>
   <string name="ENERGY_SAVE_MODE_ON">Güç tasarrufu modu açık</string>
   <string name="ENERGY_SAVE_MODE_ON_OFF">Güç Tasarrufu sayfasında Açık / Kapalı\'yı seçin.</string>
   <string name="ENERGY_SAVE_MODE_POP">Cihaz çağrı tuşuna basın; aksi takdirde derhal etkinleşmeyecektir.</string>
@@ -282,7 +282,7 @@
   <string name="HOME">Ev</string>
   <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Etkin noktalara bağlanılamıyor</string>
   <string name="HOTSPOT_CONNECT_FAILED">Bağlantı başarısız oldu, lütfen tekrar deneyin.</string>
-  <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+  <string name="HOTSPOT_DEFAULT">Cam-Hotspot</string>
   <string name="HOTSPOT_DEVICE_CONNECTING">Cihaz bağlama</string>
   <string name="HOTSPOT_NAME">Hotspot: %s</string>
   <string name="HOTSPOT_NEME_HINT">Lütfen bir etkin nokta adı girin</string>
@@ -308,8 +308,8 @@
   <string name="IMAGE_ERR">Yükleme başarısız, resim çok büyük</string>
   <string name="INVALID_ACCOUNT">Geçersiz hesap</string>
   <string name="INVALID_CODE">Geçersiz kod</string>
-  <string name="IN_APP_SOUND">UYG&#8211;içi Alarm sesi</string>
-  <string name="IN_APP_VIBRATE">UYG&#8211;içi Titreşim</string>
+  <string name="IN_APP_SOUND">UYG-içi Alarm sesi</string>
+  <string name="IN_APP_VIBRATE">UYG-içi Titreşim</string>
   <string name="IP_Address">IP adresi</string>
   <string name="I_KNOW">TAMAM</string>
   <string name="Instructions_Sent">Talimatlar gönderildi</string>
@@ -373,7 +373,7 @@
   <string name="LIVE_UNABLE_UNBIND">Geçerli %1$s kullanıcısı %2$s oturum açma işlemini kullanıyor, geçici olarak hesabı bağlayamıyor</string>
   <string name="LIVE_UNBIND_ACCOUNT">%s hesabını silmek istediğinizden emin misiniz?</string>
   <string name="LOADING">Yükleniyor&#8230;</string>
-  <string name="LOCAL_NOTIFICATION_AndroidMSG">Phone\'nunuzda \"Ayarlamalar&#8211;Bildirimlar\" aracılığı ile %s i bulun ve Bildirimler i açın</string>
+  <string name="LOCAL_NOTIFICATION_AndroidMSG">Phone\'nunuzda \"Ayarlamalar-Bildirimlar\" aracılığı ile %s i bulun ve Bildirimler i açın</string>
   <string name="LOCATION">Yer:</string>
   <string name="LOCATION_1">Ad</string>
   <string name="LOCATION_NAME">Yer:</string>
@@ -474,7 +474,7 @@
   <string name="PASSWORD">Şifre</string>
   <string name="PASSWORD_BIT">Yeni şifre</string>
   <string name="PASSWORD_LESSTHAN_SIX">Lütfen 6 şifrenin üstünde giriş yapın</string>
-  <string name="PHONE_EMAIL">E&#8211;posta</string>
+  <string name="PHONE_EMAIL">E-posta</string>
   <string name="PHONE_NUMBER">Telefon numarası</string>
   <string name="PHONE_NUMBER_1">Telefon numarası</string>
   <string name="PHONE_NUMBER_2">Geçersiz telefon numarası</string>
@@ -541,7 +541,7 @@
   <string name="RET_ECID_UNBIND_RETRY_lOGIN">CID bağlı değil, lütfen tekrar giriş yapın</string>
   <string name="RET_ECID_UNENABLE">CID izinsiz</string>
   <string name="RET_ECID_USEUP">CID süresi bitmiş</string>
-  <string name="RET_EEDITUSERINFO_EMAIL">E&#8211;posta kullanıldı.</string>
+  <string name="RET_EEDITUSERINFO_EMAIL">E-posta kullanıldı.</string>
   <string name="RET_EEDITUSERINFO_SMS_PHONE">Telefon kullanıldı.</string>
   <string name="RET_EFORGETPASS_ACCOUNT_NOT_EXIST">Bu hesap kayıtlı değil</string>
   <string name="RET_EISBIND_BYOTHER">CID başkası tarafından zaten bağlı</string>
@@ -646,10 +646,10 @@
   <string name="SET_PROFILE_PHOTO">Profil</string>
   <string name="SET_PWD">Şifre</string>
   <string name="SHARE">Paylaş</string>
-  <string name="SHARE_ACCOUNT">E&#8211;posta</string>
+  <string name="SHARE_ACCOUNT">E-posta</string>
   <string name="SHARE_DOWNLOAD">Lütfen orijinal fotoğrafı indirin ve ardından paylaşın</string>
   <string name="SHARE_ERR">Sadece 5 arkadaşla paylaş</string>
-  <string name="SHARE_E_MAIL">E&#8211;posta</string>
+  <string name="SHARE_E_MAIL">E-posta</string>
   <string name="SHARE_FROM">%s paylaşıldı</string>
   <string name="SHARE_NAME">Paylaşıldı</string>
   <string name="SIGN_UP">Kaydol</string>
@@ -695,7 +695,7 @@
   <string name="Start_Hotspot_Prompt">Açmadan önce telefonun \"%s\" WiFi şebekesine bağlı olduğundan emin olun</string>
   <string name="Start_Success">Başarıya başlayın</string>
   <string name="Start_instructions">Talimatları aç</string>
-  <string name="Start_instructions_A">Clever Dog e&#8211;postasını bağlayan WeChat Resmi Hesaplarında bu işlevi açabilirsiniz.</string>
+  <string name="Start_instructions_A">Clever Dog e-postasını bağlayan WeChat Resmi Hesaplarında bu işlevi açabilirsiniz.</string>
   <string name="Start_instructions_B">Aşağıdakileri yapın:</string>
   <string name="Start_instructions_C">1. Lütfen WeChat genel numarasına \"加菲狗官微服务\" na dikkat edin.</string>
   <string name="Start_instructions_D">Yöntem 1: \"+\"> Rehber Ekle> Resmi Hesaplar\'ın sağ üst köşesindeki WeChat\'ı tıklayın, ardından \"加菲狗官微服务\" arar ve ardından endişe duyar.</string>
@@ -703,7 +703,7 @@
   <string name="Start_instructions_F">2. Hesap bağlayın</string>
   <string name="Start_instructions_G">Dikkat \"加菲狗官微服务\" Resmi Hesaplar, ana sayfaya girin, hizmetin menü çubuğuna tıklayın, cilt hesabı seçin.</string>
   <string name="Start_instructions_H">Hesabı bağla</string>
-  <string name="Start_instructions_I">Lütfen şifreyi unuttum gibi bağlamak için Zeki köpek e&#8211;posta hesabını giriniz, lütfen Zeki köpek müşterisine geri dönün.</string>
+  <string name="Start_instructions_I">Lütfen şifreyi unuttum gibi bağlamak için Zeki köpek e-posta hesabını giriniz, lütfen Zeki köpek müşterisine geri dönün.</string>
   <string name="Switch_Mode">Lütfen geçerli şebeke çekim içeriğini doğrudan Doğrudan mod</string>
   <string name="Switch_Off">Her zaman kapalı</string>
   <string name="Switch_On">her zaman</string>
@@ -715,7 +715,7 @@
   <string name="THU_2">Perşembe</string>
   <string name="THU_Hisvideo_Timeselector">Per</string>
   <string name="TIME">Zaman</string>
-  <string name="TIMEOUT_TRY_AGIN">Bekleme&#8211;zamanaşımı \n lütfen tekrar deneyin</string>
+  <string name="TIMEOUT_TRY_AGIN">Bekleme-zamanaşımı \n lütfen tekrar deneyin</string>
   <string name="TIMEZONE_CHOOSE">Zaman bölgesi</string>
   <string name="TIMEZONE_INFO">Zaman bölgesinin değişmesi video zamanında değişikliğe sebep olabilir</string>
   <string name="TIPS">İpuçları</string>
@@ -728,9 +728,9 @@
   <string name="TUE_Hisvideo_Timeselector">Sal</string>
   <string name="TURN_ON_HOTSPOT_GUIDE">Lütfen \"Bağlan\" ardından Hot Spotson sistemini açın \"Ayarlar\"</string>
   <string name="TURN_ON_PROTECTION">Güvenlik Koruması açıkken hareket algılama otomatik olarak açılacaktır ve zaman aralığı ayarlamasına göre alarmlar gönderecektir.</string>
-  <string name="Tap0_AlreadyEmailed">Için zaten e&#8211;postayla gönderildi</string>
+  <string name="Tap0_AlreadyEmailed">Için zaten e-postayla gönderildi</string>
   <string name="Tap0_Authorizationfailed">Yetki başarısız, lütfen tekrar deneyiniz</string>
-  <string name="Tap0_BindEmail">E&#8211;posta adresinizi bağlayın</string>
+  <string name="Tap0_BindEmail">E-posta adresinizi bağlayın</string>
   <string name="Tap0_BindPhoneNo">Cep telefonunuzu bağlayın</string>
   <string name="Tap0_BindTips">Giriş için bağlanın veya yeniden şifre alın.</string>
   <string name="Tap0_Click_ActivateAccount">Hesabınızı etkinleştirmek için lütfen bağlantıyı tıklayın.</string>
@@ -738,14 +738,14 @@
   <string name="Tap0_Login_NoInstalled">Kurulu %s yok</string>
   <string name="Tap0_Register_VerificationCode">Onay kodunu giriniz</string>
   <string name="Tap0_WelcomeTourist">Bir göz atın.</string>
-  <string name="Tap0_enterphoneoremail">Cep telefonu numaranızı veya e&#8211;posta adresinizi girin</string>
+  <string name="Tap0_enterphoneoremail">Cep telefonu numaranızı veya e-posta adresinizi girin</string>
   <string name="Tap0_invaildcode">Geçersiz kod</string>
   <string name="Tap0_register">Kayıt</string>
   <string name="Tap0_register_EmailVerification">Eposta Doğrulama</string>
   <string name="Tap0_register_GoToLogin">Giriş yap</string>
   <string name="Tap0_register_SendEmail">Tekrar gönderin</string>
   <string name="Tap0_register_SendEmailTips">Email gönderildi</string>
-  <string name="Tap0_register_VerificationTips">Etkinleştirme e&#8211;postası %s\'ya gönderildi, lütfen hesabınızı etkinleştirmek için bağlantıyı tıklayın.</string>
+  <string name="Tap0_register_VerificationTips">Etkinleştirme e-postası %s\'ya gönderildi, lütfen hesabınızı etkinleştirmek için bağlantıyı tıklayın.</string>
   <string name="Tap0_wrongcode">Hata</string>
   <string name="Tap1_AddDeviceTips">Cihaz eklemek için\"+\"ya tıklayın</string>
   <string name="Tap1_AddDevice_CameraTipShort">Açıldıktan sonra WiFi tuşuna basın</string>
@@ -782,7 +782,7 @@
   <string name="Tap1_BigPic_FavoriteTips">\"Günlük Mükemmel\" içindeki resimleri topla</string>
   <string name="Tap1_CameraFun_Standby">Beklemede</string>
   <string name="Tap1_CameraFun_Standby_Description">Hazırda bekletmek için beklemeyi başlatın, bu durumda canlı izleme, geçmiş videoları kontrol etme, koruma ve alarm verme, otomatik kayıt, hızlandırılmış fotoğrafçılık vs. işlemler yapılamayacaktır.</string>
-  <string name="Tap1_CameraFun_Standby_OnTips">Time&#8211;lapse fotoğraf çekiliyor, bekleme modu açılamaz</string>
+  <string name="Tap1_CameraFun_Standby_OnTips">Time-lapse fotoğraf çekiliyor, bekleme modu açılamaz</string>
   <string name="Tap1_CameraFun_Timelapse">Hızlandırılmış fotoğraf</string>
   <string name="Tap1_CameraFun_Timelapse_Countdown">Kalan süre</string>
   <string name="Tap1_CameraFun_Timelapse_EndButton">Bitir</string>
@@ -901,7 +901,7 @@
   <string name="Tap1_Update">Güncelleştir</string>
   <string name="Tap1_UpdateFirmwareTips">Güncelleştir kısa bir süre içinde başlayacak,lütfen cep telefonunun ve cihazının aynı WIFI ile bağlantı kurduğundan emin olun</string>
   <string name="Tap1_Update_Electricity">Düşük pil &lt;% 30, yükseltme başarısız, lütfen şarj edin ve tekrar deneyin.</string>
-  <string name="Tap1_Update_Precautions">Yükseltme yaklaşık 4&#8211;5 dakika sürer; yükseltme sırasında İnternet\'i kesmeyin veya cihazı kapatmayın.</string>
+  <string name="Tap1_Update_Precautions">Yükseltme yaklaşık 4-5 dakika sürer; yükseltme sırasında İnternet\'i kesmeyin veya cihazı kapatmayın.</string>
   <string name="Tap1_device_deleted">Bu cihaz silindi</string>
   <string name="Tap1_iHome_Associate">Birleştir</string>
   <string name="Tap1_iHome_Associated">Ilişkili</string>
@@ -969,7 +969,7 @@
   <string name="Tap3_Friends_DeleteFriends">Emin silmek için？</string>
   <string name="Tap3_Friends_Details">Ayrıntıları</string>
   <string name="Tap3_Friends_Myaccount">Hesabım</string>
-  <string name="Tap3_Friends_NoBindTips">Bu işlevi kullanmak, önce e&#8211;postayı bağlamak zorundadır.</string>
+  <string name="Tap3_Friends_NoBindTips">Bu işlevi kullanmak, önce e-postayı bağlamak zorundadır.</string>
   <string name="Tap3_Friends_Share">İle paylaş%s</string>
   <string name="Tap3_Friends_Tips">Yakın bize yapar arkadaş ekleyin</string>
   <string name="Tap3_Friends_UserInfo">Kişisel detaylar</string>
@@ -1011,7 +1011,7 @@
   <string name="Tap3_ShareDevice_Tips">Bu cihaz, herhangi bir daha fazla kullanıcı ile paylaşılamaz</string>
   <string name="Tap3_ShareDevice_ToContacts">Contacts ile paylaş</string>
   <string name="Tap3_ShareDevice_UnshareTips">Unshare?</string>
-  <string name="Tap3_Share_NoBindTips">Bu işlevi kullanmak, önce e&#8211;postayı bağlamak zorundadır.</string>
+  <string name="Tap3_Share_NoBindTips">Bu işlevi kullanmak, önce e-postayı bağlamak zorundadır.</string>
   <string name="Tap3_TitleName">Beni</string>
   <string name="Tap3_TitleName_Notice">ihbar</string>
   <string name="Tap3_Uploading">Uploading&#8230;</string>
@@ -1074,13 +1074,13 @@
   <string name="WIFI_OFF">Telefonunuzda WIFI kapalı</string>
   <string name="WIFI_PWD">Şifre</string>
   <string name="WIFI_PWD_1">Şifre：</string>
-  <string name="WIFI_SET_2">1.Lütfen WIFI göstergesinin mavi yanıp söndüğünden emin olun. Değilse WIFI butonuna 3 sanie basın.\n2.\"Ayarlamalar\"&#8211;>\"WLAN\" aracılığıyla iPhone\'nuzdan %s e bağlanın, şifre 11111111</string>
-  <string name="WIFI_SET_3">Lütfen Ayarlamalar&#8211;>WLAN aracılığıyla DOG&#8211;**&#8211;****** u seçin , phone\'nuzdan katılın, Şifre 11111111</string>
-  <string name="WIFI_SET_3_1">Lütfen Ayarlamalar&#8211;>WLAN aracaılığıyla DOG&#8211;ML&#8211;****** yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
+  <string name="WIFI_SET_2">1.Lütfen WIFI göstergesinin mavi yanıp söndüğünden emin olun. Değilse WIFI butonuna 3 sanie basın.\n2.\"Ayarlamalar\"->\"WLAN\" aracılığıyla iPhone\'nuzdan %s e bağlanın, şifre 11111111</string>
+  <string name="WIFI_SET_3">Lütfen Ayarlamalar->WLAN aracılığıyla DOG-**-****** u seçin , phone\'nuzdan katılın, Şifre 11111111</string>
+  <string name="WIFI_SET_3_1">Lütfen Ayarlamalar->WLAN aracaılığıyla DOG-ML-****** yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
   <string name="WIFI_SET_4">%s e geri dön</string>
   <string name="WIFI_SET_5GTIPS">İpuçları:5Ghz WiFi sinyali şu an izinsiz</string>
-  <string name="WIFI_SET_RS">Lütfen Ayarlamalar&#8211;>WLAN aracaılığıyla RS&#8211;CAM&#8211;****** yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
-  <string name="WIFI_SET_VER">Lütfen Ayarlamalar&#8211;>WLAN aracaılığıyla %s yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
+  <string name="WIFI_SET_RS">Lütfen Ayarlamalar->WLAN aracaılığıyla RS-CAM-****** yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
+  <string name="WIFI_SET_VER">Lütfen Ayarlamalar->WLAN aracaılığıyla %s yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
   <string name="WONDER_TODAY_H_M">Bugün HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Dün HH:mm</string>
   <string name="WeChat">WeChat</string>
@@ -1111,7 +1111,7 @@
   <string name="connecting_ap">Bağlanılıyor&#8230;</string>
   <string name="contacts_auth">İrtibatlar</string>
   <string name="copy">Kopyala</string>
-  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
+  <string name="copyrightEn">Copyright ©2005-%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\n bir telefon numarası olabilir, Yapabilecekleriniz:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
