--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -282,7 +282,7 @@
   <string name="HOME">主页</string>
   <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">无法连接到热点</string>
   <string name="HOTSPOT_CONNECT_FAILED">连接失败，请重试</string>
-  <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+  <string name="HOTSPOT_DEFAULT">Cam-Hotspot</string>
   <string name="HOTSPOT_DEVICE_CONNECTING">等待设备连接</string>
   <string name="HOTSPOT_NAME">热点: %s</string>
   <string name="HOTSPOT_NEME_HINT">请输入热点名称</string>
@@ -1074,13 +1074,13 @@
   <string name="WIFI_OFF">请打开WiFi开关，再重试</string>
   <string name="WIFI_PWD">WiFi密码</string>
   <string name="WIFI_PWD_1">WiFi密码：</string>
-  <string name="WIFI_SET_2">1.请检查设备WiFi灯是否蓝色闪烁,如果没有,请长按WiFi键约3秒\n2.打开iPhone的设置&#8211;>无线网络,选择\“%s\”WiFi加入,密码8个1</string>
-  <string name="WIFI_SET_3">请在系统设置&#8211;>无线局域网，选择“DOG&#8211;**&#8211;******”加入，密码8个1</string>
-  <string name="WIFI_SET_3_1">请在系统设置&#8211;>无线局域网，选择“DOG&#8211;ML&#8211;******”加入，密码8个1</string>
+  <string name="WIFI_SET_2">1.请检查设备WiFi灯是否蓝色闪烁,如果没有,请长按WiFi键约3秒\n2.打开iPhone的设置->无线网络,选择\“%s\”WiFi加入,密码8个1</string>
+  <string name="WIFI_SET_3">请在系统设置->无线局域网，选择“DOG-**-******”加入，密码8个1</string>
+  <string name="WIFI_SET_3_1">请在系统设置->无线局域网，选择“DOG-ML-******”加入，密码8个1</string>
   <string name="WIFI_SET_4">回到%s</string>
   <string name="WIFI_SET_5GTIPS">注：暂不支持5GHz的WiFi信号</string>
-  <string name="WIFI_SET_RS">请在系统设置&#8211;>无线局域网，选择“RS&#8211;CAM&#8211;******”加入，密码8个1</string>
-  <string name="WIFI_SET_VER">请在系统设置&#8211;>无线局域网，选择“%s”加入，密码8个1</string>
+  <string name="WIFI_SET_RS">请在系统设置->无线局域网，选择“RS-CAM-******”加入，密码8个1</string>
+  <string name="WIFI_SET_VER">请在系统设置->无线局域网，选择“%s”加入，密码8个1</string>
   <string name="WONDER_TODAY_H_M">今天 HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">昨天 HH:mm</string>
   <string name="WeChat">微信</string>
@@ -1111,7 +1111,7 @@
   <string name="connecting_ap">正在获取&#8230;</string>
   <string name="contacts_auth">通讯录</string>
   <string name="copy">复制</string>
-  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved</string>
+  <string name="copyrightEn">Copyright ©2005-%s Cylan.All Rights Reserved</string>
   <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\n可能是一个电话号码，你可以：</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
@@ -1120,7 +1120,7 @@
   <string name="getting">获取中&#8230;</string>
   <string name="has_copy">已复制</string>
   <string name="has_not_sdcard">未发现Micro SD卡</string>
-  <string name="help_url">https://%1$s:8081/helps/zh&#8211;rCN%2$s.html</string>
+  <string name="help_url">https://%1$s:8081/helps/zh-rCN%2$s.html</string>
   <string name="infrared_night_vision">红外夜视</string>
   <string name="infrared_night_vision_Descript">开启红外夜视可在光线较暗的环境下得到清晰的视频画面</string>
   <string name="isStorageLow">Micro SD卡存储空间不足，无法下载。</string>
@@ -1135,7 +1135,7 @@
   <string name="please_choose_wifi">请选择WiFi网络</string>
   <string name="receive_new_news">收到%s条新消息</string>
   <string name="rename">编辑名称</string>
-  <string name="service_phonenum">400&#8211;716&#8211;3232</string>
+  <string name="service_phonenum">400-716-3232</string>
   <string name="set_failed">保存失败</string>
   <string name="setwifi_check">请设置手机连接到“%s”WiFi网络，再进行配置</string>
   <string name="share_content">最近我在用这款手机APP，很不错哦~ 配合一个摄像头可以随时随地看到家里的老人、宝宝和财物，非常好用！推荐你也试试哦~~~</string>
